@@ -18,7 +18,8 @@
 
 #include "DDGeometryCreator.h"
 #include "DDCaloHitCreator.h"
-
+#include "DD4hep/DetType.h"
+#include "DD4hep/DetectorSelector.h"
 
 namespace pandora {class Pandora;}
 
@@ -54,9 +55,6 @@ public:
         FloatVector     m_outputEnergyCorrectionPoints;     ///< The output energy points for non-linearity energy correction
         
         ///ADDED BY NIKIFOROS
-        std::string     m_vertexBarrelDetectorName;               ///< The vertex barrel detector name 
-        std::vector<std::string> m_barrelTrackerNames;      ///< The Barrel Tracking detector names 
-        std::vector<std::string> m_endcapTrackerNames;      ///< The Endcap Tracking detector names 
         std::string     m_ecalBarrelName;                   ///< The ECal barrel detector name 
         std::string     m_ecalEndcapName;                   ///< The ECal endcap detector name 
         std::vector<std::string>  m_ecalOtherNames;         ///< Additional ECal detector names 
